--- a/PoweredLabs/frontend/src/Components/Nav/Nav.css
+++ b/PoweredLabs/frontend/src/Components/Nav/Nav.css
@@ -72,12 +72,50 @@
   list-style: none;
   margin: 0 10px;
   display: flex;
+  width: 100%;
 }
 
-.nav-main-menu li a {
+.nav-main-menu-link {
   padding: 0 25px;
   display: flex;
   align-items: center;
   color: rgb(102, 102, 102);
   text-decoration: none;
+  position: relative;
+  z-index: 1;
+}
+
+.nav-main-menu-link::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 0px;
+  transition: 0.1s;
+}
+
+.services-link::before {
+  background-color: rgb(191, 14, 16);
+}
+
+.portfolio-link::before {
+  background-color: rgb(236, 104, 9);
+}
+
+.blogs-link::before {
+  background-color: rgb(26, 144, 34);
+}
+
+.contact-link::before {
+  background-color: rgb(61, 141, 193);
+}
+
+.nav-main-menu-link:hover {
+  color: white;
+}
+
+.nav-main-menu-link:hover::before {
+  height: 100%;
 }
